change for doc lib

--- a/src/extensions/ribbonTest/RibbonTestCommandSet.manifest.json
+++ b/src/extensions/ribbonTest/RibbonTestCommandSet.manifest.json
@@ -6,19 +6,15 @@
   "componentType": "Extension",
   "extensionType": "ListViewCommandSet",
 
-  // The "*" signifies that the version should be taken from the package.json
   "version": "*",
   "manifestVersion": 2,
 
-  // If true, the component can only be installed on sites where Custom Script is allowed.
-  // Components that allow authors to embed arbitrary script code should set this to true.
-  // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
 
   "items": {
     "COMMAND_1": {
-      "title": { "default": "Command One" },
-      "iconImageUrl": "icons/request.png",
+      "title": { "default": "Pridaj nove oboznamenie" },
+      "iconImageUrl": "https://cdn2.iconfinder.com/data/icons/project-management-8/500/Approval-2-512.png",
       "type": "command"
     }
   }
